# tree-sitter

./: .gitignore  CMakeLists.txt  CORPUS_VERIFICATION_HANDOFF.md  Cargo.toml  FLAT_POOL_DESIGN.md  FLAT_POOL_INVESTIGATION.md  Makefile  binding.gyp  build.zig  grammar.js  package.json  perf.diff  setup.py  wtf_is_this_compiler
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  crate_versions.yml  wasm_stdlib.yml
bindings/rust/: build.rs
cli/: Cargo.toml
cli/generate/src/: render.rs  rules.rs
cli/generate/src/build_tables/: build_parse_table.rs  item_set_builder.rs
cli/generate/src/prepare_grammar/: extract_default_aliases.rs  extract_tokens.rs
cli/loader/src/: lib.rs
cli/src/: main.rs  playground.html  test.rs
cli/src/generate/: render.rs
cli/src/tests/: highlight_test.rs
crates/cli/: Cargo.toml
crates/cli/benches/: benchmark.rs
crates/cli/src/: error.rs  fuzz.rs  highlight.rs  init.rs  input.rs  logger.rs  main.rs  parse.rs  playground.html  playground.rs  query.rs  query_testing.rs  tags.rs  test.rs  test_highlight.rs  test_tags.rs  tests.rs  tree_sitter_cli.rs  util.rs  wasm.rs
crates/cli/src/tests/: corpus_test.rs  highlight_test.rs  node_test.rs  parser_test.rs  query_test.rs  test_highlight_test.rs
crates/cli/src/tests/helpers/: fixtures.rs
crates/generate/: Cargo.toml
crates/generate/fuzz/: Cargo.toml  README.md
crates/generate/fuzz/fuzz_targets/: common.rs  native_dsl.rs  native_dsl_inherit.rs
crates/generate/fuzz/seeds/: all_config_fields  append  basic_string  boundary_i32_max  boundary_i32_overflow  comments_only  config_extras  deep_nesting  for_loops  functions  grammar_config_access  import_module  inherit_minimal  int_arith_basic  int_arith_chained  int_arith_in_let  int_arith_malformed  int_arith_named  int_arith_overflow  int_arith_with_unary  long_string  macro_definition  many_rules  many_seq_args  raw_string_hashes  string_escapes  token_soup  type_adversary_deep_list  type_adversary_nested_obj  type_adversary_recursive  type_adversary_shadow  unicode_idents  unicode_mixed  wrong_types  wrong_types_2  wrong_types_3  xtask_config_inline_supertypes  xtask_functions  xtask_inherit_override  xtask_seq_choice
crates/generate/fuzz/seeds_inherit/: inherit_empty_base  inherit_override_nonexistent  inherit_valid_base
crates/generate/src/: bitvec.rs  build_tables.rs  dedup.rs  flat_rule.rs  generate.rs  grammars.rs  nfa.rs  node_types.rs  parse_grammar.rs  parser.h.inc  picker.rs  prepare_grammar.rs  quickjs.rs  render.rs  rule_pool.rs  rules.rs  tables.rs
crates/generate/src/build_tables/: build_lex_table.rs  build_parse_table.rs  coincident_tokens.rs  item.rs  item_set_builder.rs  minimize_parse_table.rs  token_conflicts.rs
crates/generate/src/nativedsl/: apply_cfg.rs  ast.rs  diagnostic.rs  expand_macro_calls.rs  lexer.rs  loader.rs  lower.rs  mod.rs  parser.rs  resolve.rs  scope_stack.rs  serialize.rs  string_pool.rs  suggest.rs  tests.rs  typecheck.rs
crates/generate/src/nativedsl/ast/: arena.rs  mod.rs  module.rs  node.rs  pools.rs  span.rs
crates/generate/src/nativedsl/diagnostic/: mod.rs  render.rs  suggest.rs  types.rs
crates/generate/src/nativedsl/fuzz_regressions/: alias_complex_target.tsg  alias_prec_target.tsg  base_with_config.tsg  deep_nesting.tsg  fuzz_crash_1.tsg  fuzz_crash_2.tsg  fuzz_crash_3.tsg  fuzz_crash_4.tsg  fuzz_crash_5.tsg  fuzz_crash_self_ref_let.tsg  inherit_in_config_field.tsg  inherit_word.tsg  inherits_field_access.tsg  inline_object_bad_field.tsg  many_args_overflow.tsg  neg_list.tsg  no_rules.tsg  print_unresolved_ident.tsg  recursive_fn_in_fuzz.tsg  recursive_fn_stack_overflow.tsg  too_many_hashes.tsg  unary_for.tsg  word_complex_rule.tsg  word_string.tsg
crates/generate/src/nativedsl/lexer/: error.rs  escape.rs  mod.rs  token.rs
crates/generate/src/nativedsl/lower/: error.rs  evaluator.rs  mod.rs  repr.rs
crates/generate/src/nativedsl/parser/: error.rs  mod.rs
crates/generate/src/prepare_grammar/: expand_repeats.rs  expand_tokens.rs  extract_default_aliases.rs  extract_tokens.rs  flat_rule.rs  flat_spike.rs  flatten_grammar.rs  intern_symbols.rs  process_inlines.rs
crates/generate/src/templates/: array.h
crates/highlight/src/: highlight.rs
crates/language/: Cargo.toml
crates/language/wasm/src/: stdlib.c  string.c
crates/loader/: Cargo.toml
crates/loader/src/: loader.rs
crates/xtask/: Cargo.toml
crates/xtask/fuzz_corpus/inputs/: append.tsg  concat_regexp.tsg  config_conflicts.tsg  config_externals.tsg  config_precedences.tsg  config_reserved.tsg  config_word.tsg  field_alias_token.tsg  for_loops.tsg  functions.tsg  inherit_config_access.tsg  let_bindings.tsg  multi_rule_refs.tsg  object_field_access.tsg  precedence.tsg  repeat_variants.tsg  tuples_lists.tsg
crates/xtask/src/: build_wasm.rs  fetch.rs  fuzz_dsl.rs  main.rs
docs/: section-7-playground.html
docs/assets/js/: playground.js
docs/src/assets/js/: playground.js
docs/src/cli/: build.md  generate.md
docs/src/creating-parsers/: 3-writing-the-grammar.md
docs/src/using-parsers/: 7-abi-versions.md
highlight/src/: lib.rs
lib/: CMakeLists.txt  tree_sitter_types.py
lib/binding_rust/: build.rs  ffi.rs  lib.rs
lib/binding_web/: binding.js  exports.txt
lib/include/tree_sitter/: api.h
lib/src/: array.h  get_changed_ranges.c  language.c  parser.c  query.c  stack.c  subtree.c  tree_sitter.def  wasm_store.c
lib/src/wasm/: stdlib-symbols.txt  wasm-stdlib.h
script/: build-wasm  generate-fixtures-wasm
src/: grammar.json  parser.c
src/tree_sitter/: parser.h
tags/src/: lib.rs
test/fixtures/: fixtures.json
test/fixtures/test_grammars/c_native/: grammar.grammar  grammar.tsg
test/fixtures/test_grammars/cpp_native/: grammar.tsg
test/fixtures/test_grammars/import_helpers/: chained.tsg  helpers.tsg  nested.tsg
test/fixtures/test_grammars/inherit_base/: grammar_with_reserved.tsg
test/fixtures/test_grammars/inherit_base_no_word/: grammar.tsg
test/fixtures/test_grammars/javascript_native/: grammar.tsg
test/fixtures/test_grammars/json_native/: grammar.grammar  grammar.tsg
(+38 files in other folders)
