[package]
name = "tree-sitter-cli"
version.workspace = true
description = "CLI tool for developing, testing, and using Tree-sitter parsers"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
include = ["build.rs", "README.md", "benches/*", "src/**"]

[lints]
workspace = true

[[bin]]
name = "tree-sitter"
path = "src/main.rs"
doc = false

[[bench]]
name = "benchmark"
harness = false

[features]
wasm = ["tree-sitter/wasm", "tree-sitter-loader/wasm"]

[dependencies]
ansi_colours.workspace = true
anstyle.workspace = true
anyhow.workspace = true
bstr.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_complete_nushell.workspace = true
ctor.workspace = true
ctrlc.workspace = true
dialoguer.workspace = true
filetime.workspace = true
glob.workspace = true
heck.workspace = true
html-escape.workspace = true
indexmap.workspace = true
indoc.workspace = true
log.workspace = true
memchr.workspace = true
rand.workspace = true
regex.workspace = true
regex-syntax.workspace = true
rustc-hash.workspace = true
semver.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
similar.workspace = true
smallbitvec.workspace = true
streaming-iterator.workspace = true
tiny_http.workspace = true
url.workspace = true
walkdir.workspace = true
wasmparser.workspace = true
webbrowser.workspace = true

tree-sitter.workspace = true
tree-sitter-generate.workspace = true
tree-sitter-config.workspace = true
tree-sitter-highlight.workspace = true
tree-sitter-loader.workspace = true
tree-sitter-tags.workspace = true

[dev-dependencies]
encoding_rs = "0.8.35"
widestring = "1.2.0"
tree_sitter_proc_macro = { path = "src/tests/proc_macro", package = "tree-sitter-tests-proc-macro" }

tempfile.workspace = true
pretty_assertions.workspace = true
unindent.workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/tree-sitter-{ target }.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "gz"
override-target = [
    { triple = "aarch64-unknown-linux-gnu", target = "linux-arm64" },
    { triple = "arm-unknown-linux-gnueabihf", target = "linux-arm" },
    { triple = "powerpc64-unknown-linux-gnu", target = "linux-powerpc64" },
    { triple = "x86_64-unknown-linux-gnu", target = "linux-x64" },
    { triple = "i686-unknown-linux-gnu", target = "linux-x86" },
    { triple = "aarch64-apple-darwin", target = "macos-arm64" },
    { triple = "x86_64-apple-darwin", target = "macos-x64" },
    { triple = "aarch64-pc-windows-msvc", target = "windows-arm64" },
    { triple = "x86_64-pc-windows-msvc", target = "windows-x64" },
    { triple = "i686-pc-windows-msvc", target = "windows-x86" }
]
disabled-strategies = ["quick-install", "compile"]
